<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/> <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_person"
        android:title="@string/user"/> <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/help"/> </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_change_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/change_theme"/> <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/ic_language" android:title="@string/change_language"/> <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/> </menu>

    </item>

</menu>